[0.04.01] refactor(config): Archivos borrados
Archivos borrados para reconfigurar el gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-application/config/config.php
-commits.txt
-/user_guide/*
-
-
-application/config/config.php
-application/config/database.php
+user_guide/
+application/
+js/commits.txt
+inicio.html
+index.php
