--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-user_guide/
-application/
-js/commits.txt
-inicio.html
+
+#js/commits.txt
+#inicio.html
+#index.php
+
+
+# Creado por https://www.gitignore.io/api/codeigniter
+
+### Archivos ###
 index.php
+commits.txt
+
+### Carpetas ###
+user_guide/
+application/config/
+
+# Fin de https://www.gitignore.io/api/codeigniter
