--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,7 @@ commits.txt
 
 ### Carpetas ###
 user_guide/
+application/migrations/
+highcharts/
 
 # Fin de https://www.gitignore.io/api/codeigniter
